[package]
name = "http-gpio"
version = "0.1.0"
authors = ["George Hilliard <thirtythreeforty@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.2"
serde = { version = "1.0.105", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
